tests/ui/error-codes/E0779.stderr
error[E0779]: invalid instruction set specified
  --> $DIR/E0779.rs:1:1
   |
LL | #[instruction_set(arm::magic)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0779`.
